[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffered-reader = "1.1.4"
serde = { version = "1.0.160", features = ["derive"]}
serde_json = { version = "1.0.96" }
thiserror = "1.0.40"
threadpool = "1.8.1"
tokio = { version = "1.28.0", features = ["full"] }
